# mcp-code-sandbox

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  environment.yml  prd-v2.md  prd.md  pyproject.toml  pyrightconfig.json  research.md  test_eda_large.py  test_real_life.py
docker/: Dockerfile
examples/: marketing_demo.py
examples/data/: marketing.csv
src/mcp_code_sandbox/: __init__.py  __main__.py  cleanup.py  config.py  http_server.py  logging.py  models.py  server.py  session.py  validation.py
tests/: conftest.py
tests/integration/: test_artifacts.py  test_execution.py  test_http_server.py  test_limits.py  test_logging.py  test_readonly.py
tests/unit/: test_cleanup.py  test_concurrency.py  test_config.py  test_logging.py  test_models.py  test_validation.py
